--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -5,30 +5,93 @@
   </head>
   <body>
     <table border="0" width="100%">
-      <tr>
-        <td valign="top">
+      <tr valign="top">
+        <td>
           <ul>
             <li>
-              <a href="#">Account</a>
+              <a href="account.html">Account</a>
             </li>
             <li>
               <a href="#">Dashboard</a>
             </li>
             <li>
-              <a href="#">Courses</a>
+              <a href="coursesNavigation.html">Courses</a>
+            </li>
+            <li>
+              <a href="#">Calender</a>
+            </li>
+            <li>
+              <a href="#">Inbox</a>
+            </li>
+            <li>
+              <a href="#">History</a>
+            </li>
+            <li>
+              <a href="#">Studio</a>
+            </li>
+            <li>
+              <a href="#">Commons</a>
+            </li>
+            <li>
+              <a href="#">Help</a>
             </li>
           </ul>
         </td>
-        <td valign="top">
+        <td>
           <ul>
             <li>
-              <a href="#">Home</a>
+              <a href="home.html">Home</a>
             </li>
             <li>
-              <a href="#">Module</a>
+              <a href="#">Modules</a>
             </li>
             <li>
               <a href="#">Piazza</a>
+            </li>
+            <li>
+              <a href="#">Zoom Meetings</a>
+            </li>
+            <li>
+              <a href="assignments/index.html">Assignments</a>
+            </li>
+            <li>
+              <a href="#">Quizzes</a>
+            </li>
+            <li>
+              <a href="grades.html">Grades</a>
+            </li>
+            <li>
+              <a href="#">People</a>
+            </li>
+            <li>
+              <a href="#">Panopto Video</a>
+            </li>
+            <li>
+              <a href="#">Discussions</a>
+            </li>
+            <li>
+              <a href="#">Announcements</a>
+            </li>
+            <li>
+              <a href="#">Pages</a>
+            </li>
+            <li>
+              <a href="#">Files</a>
+            </li>
+            <li>
+              <a href="#">Rubrics</a>
+            </li>
+            <li>
+              <a href="#">Outcomes</a>
+            </li>
+            <li>
+              <a href="#">Collaborations</a>
+            </li>
+            <li>
+              <a href="#">Syllabus</a>
+            </li>
+            <li>
+              <a href="#">Settings</a>
             </li>
           </ul>
         </td>
@@ -41,13 +104,27 @@
             <option value="Export">Export</option>
           </select>
           <button type="Configure">Configure</button>
-          <h2>Student Names</h2>
-          <input type="text" placeholder="Search Students" title="name" />
-          <h2>Assignment Names</h2>
-          <input type="text" placeholder="Search Assignments" title="name" />
-          <p></p>
-          <!-- DOUBLE CHECK THAT ^^^-->>
+
+          <table width="100%">
+            <tr>
+              <td>
+                <h3>Student Names</h3>
+                <input type="text" placeholder="Search Students" title="name" />
+              </td>
+              <td>
+                <h3>Assignment Names</h3>
+                <input
+                  type="text"
+                  placeholder="Search Assignments"
+                  title="name"
+                />
+              </td>
+            </tr>
+          </table>
+          <p />
+
           <button type="button">Apply Filters</button>
+          <p />
           <table border="1" width="100%">
             <thead>
               <tr>
