--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -5,17 +5,17 @@
   </head>
   <body>
     <table border="0" width="100%">
-      <tr>
-        <td valign="top">
+      <tr valign="top">
+        <td>
           <ul>
             <li>
-              <a href="#">Account</a>
+              <a href="account.html">Account</a>
             </li>
             <li>
               <a href="#">Dashboard</a>
             </li>
             <li>
-              <a href="#">Courses</a>
+              <a href="coursesNavigation.html">Courses</a>
             </li>
             <li>
               <a href="#">Calender</a>
@@ -37,10 +37,10 @@
             </li>
           </ul>
         </td>
-        <td valign="top">
+        <td>
           <ul>
             <li>
-              <a href="#">Home</a>
+              <a href="home.html">Home</a>
             </li>
             <li>
               <a href="#">Modules</a>
@@ -52,13 +52,13 @@
               <a href="#">Zoom Meetings</a>
             </li>
             <li>
-              <a href="#">Assignments</a>
+              <a href="assignments/index.html">Assignments</a>
             </li>
             <li>
               <a href="#">Quizzes</a>
             </li>
             <li>
-              <a href="#">Grades</a>
+              <a href="grades.html">Grades</a>
             </li>
             <li>
               <a href="#">People</a>
@@ -95,7 +95,7 @@
             </li>
           </ul>
         </td>
-        <td valign="top">
+        <td>
           <button type="button">Collapse All</button>
           <button type="button">View Progress</button>
           <select>
@@ -171,7 +171,7 @@
             </li>
           </ul>
         </td>
-        <td valign="top">
+        <td>
           <h2>Course Status</h2>
           <button type="button">Unpublish</button>
           <button type="button">Published</button>
@@ -208,7 +208,7 @@
               <a href="#">Lecture CS4550.12631.202410 Sep 11 at 11:45am</a>
             </li>
             <li>
-              <a href="#">CS5610 06 SP23 Lecture Sep 11 at 16pm</a>
+              <a href="#">CS5610 06 SP23 Lecture Sep 11 at 6pm</a>
             </li>
           </ul>
         </td>
