--- a/public/kanbas/account.html
+++ b/public/kanbas/account.html
@@ -9,7 +9,7 @@
         <td>
           <ul>
             <li>
-              <a href="account.html">Account</a>
+              <a href="#">Account</a>
             </li>
             <li>
               <a href="#">Dashboard</a>
