--- a/public/kanbas/home.html
+++ b/public/kanbas/home.html
@@ -40,7 +40,7 @@
         <td>
           <ul>
             <li>
-              <a href="home.html">Home</a>
+              <a href="#.html">Home</a>
             </li>
             <li>
               <a href="#">Modules</a>
