--- a/public/kanbas/coursesNavigation.html
+++ b/public/kanbas/coursesNavigation.html
@@ -15,7 +15,7 @@
               <a href="#">Dashboard</a>
             </li>
             <li>
-              <a href="coursesNavigation.html">Courses</a>
+              <a href="#">Courses</a>
             </li>
             <li>
               <a href="#">Calender</a>
