--- a/public/kanbas/grades.html
+++ b/public/kanbas/grades.html
@@ -58,7 +58,7 @@
               <a href="#">Quizzes</a>
             </li>
             <li>
-              <a href="grades.html">Grades</a>
+              <a href="#.html">Grades</a>
             </li>
             <li>
               <a href="#">People</a>
