--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -43,7 +43,7 @@
               <a href="#">Notifications</a>
             </li>
             <li>
-              <a href="profile/index.html">Profile</a>
+              <a href="#">Profile</a>
             </li>
             <li>
               <a href="#">Files</a>
