--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -15,7 +15,7 @@
               <a href="#">Dashboard</a>
             </li>
             <li>
-              <a href="coursesNavigation.html">Courses</a>
+              <a href="../coursesNavigation.html">Courses</a>
             </li>
             <li>
               <a href="#">Calender</a>
@@ -40,7 +40,7 @@
         <td>
           <ul>
             <li>
-              <a href="home.html">Home</a>
+              <a href="../home.html">Home</a>
             </li>
             <li>
               <a href="#">Modules</a>
