--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -101,10 +101,14 @@
           <button>Add another link</button>
           <br />
           <button>Cancel</button>
-          <button>Save Profile</button>
+          <a href="index.html">
+            <button type="button">Save Profile</button>
+          </a>
           <br />
           <button>Edit Profile</button>
-          <button>Cancel Editing</button>
+          <a href="index.html">
+            <button type="button">Cancel Editing</button>
+          </a>
         </td>
       </tr>
     </table>
