--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,18 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <h1>CS4500</h1>
+    <h2>Assignments</h2>
+    <ul>
+      <li>
+        <a href="Kanbas/KanbasNavigation/index.html">A1</a>
+      </li>
+    </ul>
+    <h2>Labs</h2>
+    <ul>
+      <li>
+        <a href="labs/a1/index.html">L1</a>
+      </li>
+    </ul>
   </body>
 </html>
