--- a/public/kanbas/assignments/edit.html
+++ b/public/kanbas/assignments/edit.html
@@ -150,13 +150,13 @@
           <input value="Everyone" />
           <p />
           Due <br />
-          <input type="date" />
+          <input type="date" value="2021-01-01" />
           <p />
           Available from <br />
-          <input type="date" />
+          <input type="date" value="2021-01-01" />
           <p />
           Until <br />
-          <input type="date" />
+          <input type="date" value="2021-01-01" />
           <p />
           <a href="index.html">
             <button>Cancel</button>
