--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,9 @@
       <li>
         <a href="labs/a1/index.html">L1</a>
       </li>
+      <li>
+        <a href="labs/a2/index.html">L2</a>
+      </li>
     </ul>
   </body>
 </html>
