--- a/public/kanbas/KanbasNavigation/kanbasNavigation.html
+++ b/public/kanbas/KanbasNavigation/kanbasNavigation.html
@@ -2,20 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet" />
     <link
       rel="stylesheet"
       href="../../vendors/bootstrap/css/bootstrap.min.css"
     />
-    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet" />
-    <link rel="stylesheet" href="../KanbasNavigation/kanbasNavigation.css" />
-    <link rel="stylesheet" href="../account/account.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="kanbasNavigation.css" />
   </head>
   <body>
     <div class="wd-flex-row-container">
       <div class="wd-kanbas-navigation">
         <ul class="list-group">
-          <li class="list-group-item active account">
+          <li class="list-group-item account">
             <a href="../account/account.html">
               <i class="fas fa-user-circle"></i>
               Account
@@ -68,38 +66,6 @@
               <i class="far fa-question-circle"></i>
               Help
             </a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="wd-account-navigation">
-        <ul class="list-group">
-          <li class="list-group-item">
-            <a href="#">Notifications</a>
-          </li>
-          <li class="list-group-item active">
-            <a href="../profile/index.html">Profile</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Files</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Settings</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">ePortfolios</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Shared Content</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">The Hub</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Qwickly Course Tools</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Global Announcements</a>
           </li>
         </ul>
       </div>
