--- a/public/kanbas/account/account.html
+++ b/public/kanbas/account/account.html
@@ -8,8 +8,7 @@
     />
     <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="../KanbasNavigation/kanbasNavigation.css" />
-    <link rel="stylesheet" href="../account/account.css" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="account.css" />
   </head>
   <body>
     <div class="wd-flex-row-container">
@@ -71,13 +70,12 @@
           </li>
         </ul>
       </div>
-
       <div class="wd-account-navigation">
         <ul class="list-group">
           <li class="list-group-item">
             <a href="#">Notifications</a>
           </li>
-          <li class="list-group-item active">
+          <li class="list-group-item">
             <a href="../profile/index.html">Profile</a>
           </li>
           <li class="list-group-item">
