--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -2,90 +2,130 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="../../vendors/bootstrap/css/bootstrap.min.css"
+    />
+    <link href="../../vendors/fontawesome/css/all.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../KanbasNavigation/kanbasNavigation.css" />
+    <link rel="stylesheet" href="../account/account.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <table border="0" width="100%">
-      <tr valign="top">
-        <td>
-          <ul>
-            <li>
-              <a href="../account.html">Account</a>
-            </li>
-            <li>
-              <a href="#">Dashboard</a>
-            </li>
-            <li>
-              <a href="../coursesNavigation.html">Courses</a>
-            </li>
-            <li>
-              <a href="#">Calender</a>
-            </li>
-            <li>
-              <a href="#">Inbox</a>
-            </li>
-            <li>
-              <a href="#">History</a>
-            </li>
-            <li>
-              <a href="#">Studio</a>
-            </li>
-            <li>
-              <a href="#">Commons</a>
-            </li>
-            <li>
-              <a href="#">Help</a>
-            </li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li>
-              <a href="#">Notifications</a>
-            </li>
-            <li>
-              <a href="#">Profile</a>
-            </li>
-            <li>
-              <a href="#">Files</a>
-            </li>
-            <li>
-              <a href="#">Settings</a>
-            </li>
-            <li>
-              <a href="#">ePortfolios</a>
-            </li>
-            <li>
-              <a href="#">Shared Content</a>
-            </li>
-            <li>
-              <a href="#">The Hub</a>
-            </li>
-            <li>
-              <a href="#">Qwickly Course Tools</a>
-            </li>
-            <li>
-              <a href="#">Global Announcements</a>
-            </li>
-          </ul>
-        </td>
-        <td>
-          Alina Geng's Profile
-          <p />
-          <h1>
-            Alina Geng
-            <a href="edit.html">
-              <button>Edit Profile</button>
+    <div class="wd-flex-row-container">
+      <div class="wd-kanbas-navigation">
+        <ul class="list-group">
+          <li class="list-group-item active account">
+            <a href="../account/account.html">
+              <i class="fas fa-user-circle"></i>
+              Account
             </a>
-          </h1>
-          <h2>Contact</h2>
-          No registered services, you can add some on the
-          <a href="#">settings</a> page.
-          <h2>Biography</h2>
-          Student
-          <h2>Links</h2>
-          <a href="#">YouTube</a>
-        </td>
-      </tr>
-    </table>
+          </li>
+          <li class="list-group-item">
+            <a href="#">
+              <i class="fas fa-tachometer-alt"></i>
+              Dashboard
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">
+              <i class="fas fa-book"></i>
+              Courses
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">
+              <i class="fas fa-calendar-week"></i>
+              Calender
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">
+              <i class="fas fa-inbox"></i>
+              Inbox
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">
+              <i class="far fa-clock"></i>
+              History
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">
+              <i class="fab fa-octopus-deploy"></i>
+              Studio
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">
+              <i class="fas fa-arrow-right"></i>
+              Commons
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">
+              <i class="far fa-question-circle"></i>
+              Help
+            </a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="wd-account-navigation">
+        <ul class="list-group">
+          <li class="list-group-item">
+            <a href="#">Notifications</a>
+          </li>
+          <li class="list-group-item active">
+            <a href="../profile/index.html">Profile</a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">Files</a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">Settings</a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">ePortfolios</a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">Shared Content</a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">The Hub</a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">Qwickly Course Tools</a>
+          </li>
+          <li class="list-group-item">
+            <a href="#">Global Announcements</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="wd-profile">
+        <i class="fas fa-user-circle"></i>
+        <h1>Alina Geng</h1>
+        <h2>Contact</h2>
+        <p>No registered services, you can add some on the settings page.</p>
+        <h2>Biography</h2>
+        <p>Student</p>
+        <h2>Links</h2>
+        <a href="https://www.youtube.com/">
+          <i class="fas fa-link"></i>
+          YouTube
+        </a>
+      </div>
+
+      <div class="wd-edit-button">
+        <a href="edit.html">
+          <button type="submit" class="btn btn-light">
+            <i class="fas fa-pencil-alt"></i>
+            Edit Profile
+          </button>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
