--- a/public/kanbas/KanbasNavigation/kanbasNavigation.html
+++ b/public/kanbas/KanbasNavigation/kanbasNavigation.html
@@ -20,7 +20,7 @@
             </a>
           </li>
           <li class="list-group-item">
-            <a href="#">
+            <a href="../dashboard/dashboard.html">
               <i class="fas fa-tachometer-alt"></i>
               Dashboard
             </a>
