--- a/public/kanbas/profile/index.html
+++ b/public/kanbas/profile/index.html
@@ -108,7 +108,10 @@
         <i class="fas fa-user-circle"></i>
         <h1>Alina Geng</h1>
         <h2>Contact</h2>
-        <p>No registered services, you can add some on the settings page.</p>
+        <p>
+          No registered services, you can add some on the
+          <span>settings</span> page.
+        </p>
         <h2>Biography</h2>
         <p>Student</p>
         <h2>Links</h2>
@@ -118,7 +121,7 @@
         </a>
       </div>
 
-      <div class="wd-edit-button">
+      <div class="wd-edit-button float-end">
         <a href="edit.html">
           <button type="submit" class="btn btn-light">
             <i class="fas fa-pencil-alt"></i>
