--- a/public/kanbas/account/account.html
+++ b/public/kanbas/account/account.html
@@ -11,95 +11,97 @@
     <link rel="stylesheet" href="account.css" />
   </head>
   <body>
-    <div class="wd-flex-row-container">
-      <div class="wd-kanbas-navigation">
-        <ul class="list-group">
-          <li class="list-group-item active account">
-            <a href="../account/account.html">
-              <i class="fas fa-user-circle"></i>
-              Account
-            </a>
-          </li>
-          <li class="list-group-item">
-            <a href="../dashboard/dashboard.html">
-              <i class="fas fa-tachometer-alt"></i>
-              Dashboard
-            </a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">
-              <i class="fas fa-book"></i>
-              Courses
-            </a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">
-              <i class="fas fa-calendar-week"></i>
-              Calender
-            </a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">
-              <i class="fas fa-inbox"></i>
-              Inbox
-            </a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">
-              <i class="far fa-clock"></i>
-              History
-            </a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">
-              <i class="fab fa-octopus-deploy"></i>
-              Studio
-            </a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">
-              <i class="fas fa-arrow-right"></i>
-              Commons
-            </a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">
-              <i class="far fa-question-circle"></i>
-              Help
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="wd-account-navigation">
-        <ul class="list-group">
-          <li class="list-group-item">
-            <a href="#">Notifications</a>
-          </li>
-          <li class="list-group-item">
-            <a href="../profile/index.html">Profile</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Files</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Settings</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">ePortfolios</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Shared Content</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">The Hub</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Qwickly Course Tools</a>
-          </li>
-          <li class="list-group-item">
-            <a href="#">Global Announcements</a>
-          </li>
-        </ul>
+    <div class="container">
+      <div class="row">
+        <div class="wd-kanbas-navigation">
+          <ul class="list-group">
+            <li class="list-group-item active account">
+              <a href="../account/account.html">
+                <i class="fas fa-user-circle"></i>
+                Account
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="../dashboard/dashboard.html">
+                <i class="fas fa-tachometer-alt"></i>
+                Dashboard
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="../courses/courses.html">
+                <i class="fas fa-book"></i>
+                Courses
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-calendar-week"></i>
+                Calender
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-inbox"></i>
+                Inbox
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="far fa-clock"></i>
+                History
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fab fa-octopus-deploy"></i>
+                Studio
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="fas fa-arrow-right"></i>
+                Commons
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">
+                <i class="far fa-question-circle"></i>
+                Help
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="wd-account-navigation">
+          <ul class="list-group">
+            <li class="list-group-item">
+              <a href="#">Notifications</a>
+            </li>
+            <li class="list-group-item">
+              <a href="../profile/index.html">Profile</a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">Files</a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">Settings</a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">ePortfolios</a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">Shared Content</a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">The Hub</a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">Qwickly Course Tools</a>
+            </li>
+            <li class="list-group-item">
+              <a href="#">Global Announcements</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
