--- a/public/kanbas/profile/edit.html
+++ b/public/kanbas/profile/edit.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="wd-flex-row-container">
+    <div class="row">
       <div class="wd-kanbas-navigation">
         <ul class="list-group">
           <li class="list-group-item active account">
@@ -28,7 +28,7 @@
             </a>
           </li>
           <li class="list-group-item">
-            <a href="#">
+            <a href="../courses/courses.html">
               <i class="fas fa-book"></i>
               Courses
             </a>
