--- a/public/kanbas/KanbasNavigation/kanbasNavigation.html
+++ b/public/kanbas/KanbasNavigation/kanbasNavigation.html
@@ -27,7 +27,7 @@
               </a>
             </li>
             <li class="list-group-item">
-              <a href="#">
+              <a href="../courses/courses.html">
                 <i class="fas fa-book"></i>
                 Courses
               </a>
