--- a/public/kanbas/assignments/index.html
+++ b/public/kanbas/assignments/index.html
@@ -141,8 +141,8 @@
               </nav>
             </div>
             <div class="col-4">
-              <div class="float-end wd-student-button">
-                <button type="submit" class="btn btn-light">
+              <div class="float-end">
+                <button type="submit" class="btn btn-light mt-4">
                   <i class="fas fa-glasses"></i>
                   Student View
                 </button>
@@ -150,14 +150,14 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-5">
+            <div class="col-5 w-25">
               <input
                 type="text"
                 class="form-control"
                 placeholder="Search for Assignments"
               />
             </div>
-            <div class="col-4">
+            <div class="col-6">
               <div class="float-end">
                 <button type="submit" class="btn btn-light">
                   <i class="fas fa-plus"></i>
@@ -175,35 +175,168 @@
           </div>
 
           <div class="row">
-            <div class="col-9 wd-assignments-container">
+            <div class="col-9 p-10">
               <hr />
-              <div class="wd-assignments-list">
+              <div class="wd-assignments-list m-1">
                 <ul class="list-group">
                   <li class="list-group-item active">
-                    <div>
-                      <i class="fas fa-grip-vertical"></i>
-                      <i class="fas fa-sort-down"></i>
-                      Assignments
-                      <div class="float-end">
-                        <button
-                          type="submit"
-                          class="btn wd-40-total rounded-pill"
-                        >
-                          40% of Total
-                        </button>
-                        <button type="submit" class="btn">
-                          <i class="fas fa-plus"></i>
-                        </button>
-                        <button type="submit" class="btn">
-                          <i class="fas fa-ellipsis-v"></i>
-                        </button>
+                    <div class="row">
+                      <div class="col-9 d-flex align-items-center">
+                        <i class="fas fa-grip-vertical"></i>
+                        <i class="fas fa-caret-down"></i>
+                        <h6>Assignments</h6>
+                      </div>
+
+                      <div class="col-3">
+                        <div class="float-end">
+                          <button
+                            type="submit"
+                            class="btn wd-40-total rounded-pill"
+                          >
+                            40% of Total
+                          </button>
+                          <button type="submit" class="btn p-0">
+                            <i class="fas fa-plus"></i>
+                          </button>
+                          <button type="submit" class="btn p-0">
+                            <i class="fas fa-ellipsis-v"></i>
+                          </button>
+                        </div>
                       </div>
                     </div>
                   </li>
-                  <li class="list-group-item">Dapibus ac facilisis in</li>
-                  <li class="list-group-item">Morbi leo risus</li>
-                  <li class="list-group-item">Porta ac consectetur ac</li>
-                  <li class="list-group-item">Vestibulum at eros</li>
+                  <li class="list-group-item">
+                    <div class="row">
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-grip-vertical"></i>
+                        <i class="fas fa-pen-square wd-green"></i>
+                      </div>
+                      <div class="col-10">
+                        <a href="edit.html">
+                          <h6>A1 SETUP</h6>
+                        </a>
+                        <text>
+                          Week 0 - SETUP - Week starting on Monday September 5th
+                          (9/5/2022) Module |</text
+                        ><br />
+                        <text><b>Due</b> Sep 18, 2022 at 11:59pm | 100pts</text>
+                      </div>
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-check-circle wd-green"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="row">
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-grip-vertical"></i>
+                        <i class="fas fa-pen-square wd-green"></i>
+                      </div>
+                      <div class="col-10">
+                        <a href="edit.html">
+                          <h6>A2 HTML</h6>
+                        </a>
+                        <text>
+                          Week 1 - HTML - Week starting on Monday September 12th
+                          (9/12/2022) Module |</text
+                        ><br />
+                        <text><b>Due</b> Sep 25, 2022 at 11:59pm | 100pts</text>
+                      </div>
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-check-circle wd-green"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="row">
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-grip-vertical"></i>
+                        <i class="fas fa-pen-square wd-green"></i>
+                      </div>
+                      <div class="col-10">
+                        <a href="edit.html">
+                          <h6>A3 SETUP</h6>
+                        </a>
+                        <text>
+                          Week 3 - CSS - Week starting on Monday September 19th
+                          (9/19/2022) Module |</text
+                        ><br />
+                        <text><b>Due</b> Oct 2, 2022 at 11:59pm | 100pts</text>
+                      </div>
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-check-circle wd-green"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="row">
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-grip-vertical"></i>
+                        <i class="fas fa-pen-square wd-green"></i>
+                      </div>
+                      <div class="col-10">
+                        <a href="edit.html">
+                          <h6>A1 SETUP</h6>
+                        </a>
+                        <text>
+                          Week 0 - SETUP - Week starting on Monday September 5th
+                          (9/5/2022) Module |</text
+                        ><br />
+                        <text><b>Due</b> Sep 18, 2022 at 11:59pm | 100pts</text>
+                      </div>
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-check-circle wd-green"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="row">
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-grip-vertical"></i>
+                        <i class="fas fa-pen-square wd-green"></i>
+                      </div>
+                      <div class="col-10">
+                        <a href="edit.html">
+                          <h6>A1 SETUP</h6>
+                        </a>
+                        <text>
+                          Week 0 - SETUP - Week starting on Monday September 5th
+                          (9/5/2022) Module |</text
+                        ><br />
+                        <text><b>Due</b> Sep 18, 2022 at 11:59pm | 100pts</text>
+                      </div>
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-check-circle wd-green"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </div>
+                    </div>
+                  </li>
+                  <li class="list-group-item">
+                    <div class="row">
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-grip-vertical"></i>
+                        <i class="fas fa-pen-square wd-green"></i>
+                      </div>
+                      <div class="col-10">
+                        <a href="edit.html">
+                          <h6>A1 SETUP</h6>
+                        </a>
+                        <text>
+                          Week 0 - SETUP - Week starting on Monday September 5th
+                          (9/5/2022) Module |</text
+                        ><br />
+                        <text><b>Due</b> Sep 18, 2022 at 11:59pm | 100pts</text>
+                      </div>
+                      <div class="col-1 d-flex align-items-center">
+                        <i class="fas fa-check-circle wd-green"></i>
+                        <i class="fas fa-ellipsis-v"></i>
+                      </div>
+                    </div>
+                  </li>
                 </ul>
               </div>
             </div>
